--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html x-data="{URL:''}" lang="en">
+<html x-data="{URL:'new-thermostat/'}" lang="en">
 
 <head>
     <meta charset="UTF-8">
