--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html x-data="{URL:'new-thermostat/'}" lang="en">
+<html x-data="{URL:location.pathname,IP:'//'+(new URLSearchParams(document.location.search)).get('ip')}" lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thermostat</title>
-
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
