--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html x-data="{URL:location.pathname,IP:'//'+(new URLSearchParams(document.location.search)).get('ip')}" lang="en">
+<html x-data="{URL:location.pathname,IP:'http://'+(new URLSearchParams(document.location.search)).get('ip')}" lang="en">
 
 <head>
     <meta charset="UTF-8">
